--- a/.github/scripts/k8s/k8s-resources.yaml
+++ b/.github/scripts/k8s/k8s-resources.yaml
@@ -56,7 +56,7 @@ spec:
     command: ['/bin/sh']
     args:
     - "-c"
-    - set -x; mkdir -p /tmp/pkglinks/ && cp /mnt/pkgs/PACKAGES* /tmp/pkglinks/ && ls /mnt/pkgs/* | grep ".tar.gz$" | sed 's#/mnt/pkgs/##g' | xargs -i bash -c "ln -s /mnt/pkgs/{} /tmp/pkglinks/{}"; Rscript -e 'tools::write_PACKAGES("/tmp/pkglinks", addFiles = TRUE, verbose = TRUE, latestOnly = FALSE)' && cp /tmp/pkglinks/PACKAGES* /mnt/results/
+    - set -x; mkdir -p /tmp/pkglinks/ && ls /mnt/pkgs/* | grep ".tar.gz$" | sed 's#/mnt/pkgs/##g' | xargs -i bash -c "ln -s /mnt/pkgs/{} /tmp/pkglinks/{}"; Rscript -e 'tools::write_PACKAGES("/tmp/pkglinks", addFiles = TRUE, verbose = TRUE, latestOnly = FALSE)' && cp /tmp/pkglinks/PACKAGES* /mnt/results/
   containers:
   - image: ghcr.io/bioconductor/bioconductor:devel
     imagePullPolicy: IfNotPresent
