--- a/.github/workflows/test-and-push.yaml
+++ b/.github/workflows/test-and-push.yaml
@@ -102,7 +102,8 @@ jobs:
             fi
 
       - run: |
-          rclone copyto js2:/gha-build/$(cat containername)/$(cat arch)/$(cat runstarttime)/binaries/src/contrib js2:/${{steps.variables.outputs.biocver}}/container-binaries/$(cat containername)/$(cat arch)/binaries/src/contrib -vvvvvv
+          grep -ihr "tar.gz$" lists/ | sort | uniq > /tmp/listalltars
+          cat /tmp/listalltars | xargs -i rclone copyto js2:/gha-build/$(cat containername)/$(cat arch)/$(cat runstarttime)/binaries/src/contrib/{} js2:/${{steps.variables.outputs.biocver}}/container-binaries/$(cat containername)/$(cat arch)/binaries/src/contrib/{} -vvvvvv
           rclone purge js2:/gha-build/$(cat containername)/$(cat arch)/$(cat runstarttime)/libraries -vvvvv
         if: steps.variables.outcome=='success'
 
